--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
       <h1>Today I Learned</h1>
     </header>
 
+    <form>
+      <input type="text" placeholder="Share a fact with the world" />
+      <span></span>
+      <input type="text" placeholder="Trustworthy source" />
+      <select>
+        <option value="">Choose category:</option>
+        <option value="technology">Technology</option>
+        <option value="science">Science</option>
+        <option value="finance">Finance</option>
+      </select>
+      <button>Post</button>
+    </form>
+
     <main>
       <aside>
         <ul>
