--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <header>
       <img src="logo.png" height="68" width="68" alt="Today I Learned Logo" />
       <h1>Today I Learned</h1>
+      <button>Share a fact</button>
     </header>
 
     <form>
@@ -41,6 +42,11 @@
               <a href="https://opensource.fb.com/" target="_blank">(Source)</a>
               <span>#technology#</span>
             </p>
+            <div>
+              <button>👍 <strong>24</strong></button>
+              <button>🤯 <strong>9</strong></button>
+              <button>⛔ <strong>4</strong></button>
+            </div>
           </li>
           <li>
             <p>
@@ -54,6 +60,11 @@
               >
               <span>#society#</span>
             </p>
+            <div>
+              <button>👍 <strong>11</strong></button>
+              <button>🤯 <strong>2</strong></button>
+              <button>⛔ <strong>0</strong></button>
+            </div>
           </li>
         </ul>
       </section>
