--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                 >#technology#</span
               >
               <div class="vote-buttons">
-                <button>👍 <strong>24</strong></button>
-                <button>🤯 <strong>9</strong></button>
-                <button>⛔ <strong>4</strong></button>
+                <button>👍 24</button>
+                <button>🤯 9</button>
+                <button>⛔ 4</button>
               </div>
             </li>
             <li class="fact">
@@ -103,9 +103,9 @@
                 >#society#</span
               >
               <div class="vote-buttons">
-                <button>👍 <strong>11</strong></button>
-                <button>🤯 <strong>2</strong></button>
-                <button>⛔ <strong>0</strong></button>
+                <button>👍 11</button>
+                <button>🤯 2</button>
+                <button>⛔ 0</button>
               </div>
             </li>
           </ul>
