chore: Add category glass to all categories button

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
       <main class="main">
         <aside>
           <ul>
-            <li><button class="btn btn-all-categories">All</button></li>
+            <li class="category">
+              <button class="btn btn-all-categories">All</button>
+            </li>
             <li class="category">
               <button
                 class="btn btn-category"
